Better handling of form starting - polls to check it's running

--- a/app.css
+++ b/app.css
@@ -16,3 +16,15 @@ html.govuk-template {
 .govuk-table__row {
   cursor: pointer;
 }
+
+.js-hidden {
+  display: none;
+}
+
+.govuk-error-message {
+  display: none;
+}
+
+.govuk-form-group--error .govuk-error-message {
+  display: block;
+}
