--- a/app.css
+++ b/app.css
@@ -28,3 +28,102 @@ html.govuk-template {
 .govuk-form-group--error .govuk-error-message {
   display: block;
 }
+
+
+
+/* copied from fb-editor */
+
+.fb-editor-header {
+  background: #000;
+  color: #fff;
+  border-bottom: solid 10px #28a197;
+  display: table;
+  width: 100%;
+}
+.fb-editor-header > * {
+  padding: 0.5rem 0.5rem;
+  display: table-cell;
+  vertical-align: middle;
+  white-space: nowrap;
+}
+.fb-editor-header a {
+  color: #fff;
+}
+.fb-editorheader--branding {
+  width: 1px; /* collapse cell as much as possible */
+  position: relative;
+  top: 0.25rem;
+  padding-right: 2rem;
+}
+.fb-editorheader--form {
+  font-weight: normal;
+}
+.fb-editorheader--navigation {
+  text-align: right;
+  padding-right: 2rem;
+}
+.fb-editorheader--navigation ul {
+  margin: 0;
+  padding: 0;
+}
+.fb-editorheader--navigation .govuk-header__link {
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.fb-navigation {
+  background: #f8f8f8;
+  margin: 0;
+  padding: 0 0.5rem;
+  overflow: hidden;
+  border-bottom: solid 1px #b3b9be;
+}
+.fb-navigation ul {
+  margin: 0;
+  padding: 0;
+}
+.fb-navigation li {
+  list-style-type: none;
+}
+.fb-navigation .fb-navigation-current a,
+.fb-navigation a {
+  color: #005ea5;
+  text-decoration: none;
+  border-bottom: 0.25rem solid transparent;
+  padding: 0.75rem 1rem 0.5rem;
+}
+.fb-navigation li:hover a {
+  color: #2b8cc4;
+}
+.fb-navigation li:hover a {
+  border-bottom-color: #2b8cc4;
+}
+.fb-navigation .fb-navigation-current a {
+  border-bottom-color: #005ea5;
+}
+
+.adminBack {
+  margin: 0;
+  padding: 0.75rem 1.5rem;
+  border-bottom: solid 1px #b3b9be;
+}
+.adminBack a,
+.adminBack a:visited {
+  color: #005ea5;
+}
+.adminBack a::before {
+  content:'‹ ';
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+@media (min-width: 40.0625em) {
+  .fb-navigation li {
+    display: inline-block;
+  }
+  .fb-navigation li a {
+    display: inline-block;
+    font-size: 1.1875rem;
+    font-weight: bold;
+  }
+}
