--- a/assets/stylesheets/create-0.5.7.css
+++ b/assets/stylesheets/create-0.5.7.css
@@ -6164,13 +6164,6 @@ html.govuk-template {
   background: #fff
 }
 
-@media (min-width:48.0625em) {
-  .govuk-header__content {
-    width: auto;
-    float: right
-  }
-}
-
 .govuk-table__row {
   cursor: pointer
 }
@@ -6229,42 +6222,6 @@ html.govuk-template {
   font-weight: 400
 }
 
-.fb-navigation {
-  background: #f8f8f8;
-  margin: 0;
-  padding: 0 .5rem;
-  overflow: hidden;
-  border-bottom: 1px solid #b3b9be
-}
-
-.fb-navigation ul {
-  margin: 0;
-  padding: 0;
-  display: -webkit-box;
-  display: flex
-}
-
-.fb-navigation li {
-  list-style-type: none
-}
-
-.fb-navigation .fb-navigation-current a,
-.fb-navigation a {
-  color: #005ea5;
-  text-decoration: none;
-  border-bottom: .25rem solid transparent;
-  padding: .75rem 1rem .5rem
-}
-
-.fb-navigation li:hover a {
-  color: #2b8cc4;
-  border-bottom-color: #2b8cc4
-}
-
-.fb-navigation .fb-navigation-current a {
-  border-bottom-color: #005ea5
-}
-
 .adminBack {
   margin: 0;
   padding: .75rem 1.5rem;
@@ -6280,6 +6237,51 @@ html.govuk-template {
   content: "‹ ";
   font-size: 1rem;
   font-weight: 700
+}
+
+.fb-navigation {
+  background: #f8f8f8;
+  margin: 0;
+  padding: 0 .5rem;
+  overflow: hidden;
+  border-bottom: 1px solid #b3b9be
+}
+
+.fb-navigation a {
+  color: #005ea5;
+  text-decoration: none;
+  border-bottom: .25rem solid transparent;
+  padding: .75rem 1rem .5rem
+}
+
+.fb-navigation ul {
+  margin: 0;
+  padding: 0;
+  display: -webkit-box;
+  display: flex
+}
+
+.fb-navigation .fb-navigation-current a {
+  color: #005ea5;
+  text-decoration: none;
+  border-bottom: .25rem solid #005ea5;
+  padding: .75rem 1rem .5rem
+}
+
+.fb-navigation li {
+  list-style-type: none
+}
+
+.fb-navigation li:hover a {
+  color: #2b8cc4;
+  border-bottom-color: #2b8cc4
+}
+
+@media (min-width:48.0625em) {
+  .govuk-header__content {
+    width: auto;
+    float: right
+  }
 }
 
 @media (min-width:40.0625em) {
