--- a/src/sass/_all.scss
+++ b/src/sass/_all.scss
@@ -6,13 +6,6 @@ html.govuk-template {
   white-space: nowrap;
 }
 
-@media (min-width: 48.0625em) {
-  .govuk-header__content {
-    width: auto;
-    float: right;
-  }
-}
-
 .govuk-table__row {
   cursor: pointer;
 }
@@ -29,44 +22,67 @@ html.govuk-template {
   display: block;
 }
 
-/* copied from fb-editor */
-
 .fb-editor-header {
   background: #000;
   color: #fff;
   border-bottom: solid 10px #28a197;
   display: table;
   width: 100%;
+
+  > * {
+    padding: 0.5rem 0.5rem;
+    display: table-cell;
+    vertical-align: middle;
+    white-space: nowrap;
+  }
+
+  a {
+    color: #fff;
+  }
 }
-.fb-editor-header > * {
-  padding: 0.5rem 0.5rem;
-  display: table-cell;
-  vertical-align: middle;
-  white-space: nowrap;
-}
-.fb-editor-header a {
-  color: #fff;
-}
+
 .fb-editorheader--branding {
   width: 1px; /* collapse cell as much as possible */
   position: relative;
   top: 0.25rem;
   padding-right: 2rem;
 }
+
 .fb-editorheader--form {
   font-weight: normal;
 }
+
 .fb-editorheader--navigation {
   text-align: right;
   padding-right: 2rem;
+
+  ul {
+    margin: 0;
+    padding: 0;
+  }
+
+  .govuk-header__link {
+    font-size: 24px;
+    font-weight: normal;
+  }
 }
-.fb-editorheader--navigation ul {
+
+.adminBack {
   margin: 0;
-  padding: 0;
-}
-.fb-editorheader--navigation .govuk-header__link {
-  font-size: 24px;
-  font-weight: normal;
+  padding: 0.75rem 1.5rem;
+  border-bottom: solid 1px #b3b9be;
+
+  a {
+    color: #005ea5;
+    &:visited {
+      color: #005ea5;
+    }
+    &::before {
+      content:'‹ ';
+      font-size: 1rem;
+      font-weight: bold;
+    }
+  }
 }
 
 .fb-navigation {
@@ -75,54 +91,54 @@ html.govuk-template {
   padding: 0 0.5rem;
   overflow: hidden;
   border-bottom: solid 1px #b3b9be;
-}
-.fb-navigation ul {
-  margin: 0;
-  padding: 0;
-  display: flex;
-}
-.fb-navigation li {
-  list-style-type: none;
-}
-.fb-navigation .fb-navigation-current a,
-.fb-navigation a {
-  color: #005ea5;
-  text-decoration: none;
-  border-bottom: 0.25rem solid transparent;
-  padding: 0.75rem 1rem 0.5rem;
-}
-.fb-navigation li:hover a {
-  color: #2b8cc4;
-}
-.fb-navigation li:hover a {
-  border-bottom-color: #2b8cc4;
-}
-.fb-navigation .fb-navigation-current a {
-  border-bottom-color: #005ea5;
+
+  a { // stylelint-disable-line no-descending-specificity
+    color: #005ea5;
+    text-decoration: none;
+    border-bottom: 0.25rem solid transparent;
+    padding: 0.75rem 1rem 0.5rem;
+  }
+
+  ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+  }
+
+  .fb-navigation-current a {
+    color: #005ea5;
+    text-decoration: none;
+    border-bottom: 0.25rem solid #005ea5;
+    padding: 0.75rem 1rem 0.5rem;
+  }
+
+  li {
+    list-style-type: none;
+
+    &:hover a {
+      color: #2b8cc4;
+      border-bottom-color: #2b8cc4;
+    }
+  }
 }
 
-.adminBack {
-  margin: 0;
-  padding: 0.75rem 1.5rem;
-  border-bottom: solid 1px #b3b9be;
-}
-.adminBack a,
-.adminBack a:visited {
-  color: #005ea5;
-}
-.adminBack a::before {
-  content:'‹ ';
-  font-size: 1rem;
-  font-weight: bold;
+@media (min-width: 48.0625em) {
+  .govuk-header__content {
+    width: auto;
+    float: right;
+  }
 }
 
 @media (min-width: 40.0625em) {
-  .fb-navigation li {
-    display: inline-block;
-  }
-  .fb-navigation li a {
-    display: inline-block;
-    font-size: 1.1875rem;
-    font-weight: bold;
+  .fb-navigation {
+    li {
+      display: inline-block;
+
+      a {
+        display: inline-block;
+        font-size: 1.1875rem;
+        font-weight: bold;
+      }
+    }
   }
 }
