--- a/assets/stylesheets/app-0.5.9.css
+++ b/assets/stylesheets/app-0.5.9.css
@@ -6295,4 +6295,39 @@ html.govuk-template {
     font-weight: 700
   }
 }
-/*# sourceMappingURL=add-0.5.8.css.map */
+
+.cell-nowrap a {
+  display: block
+}
+
+.cell-nowrap .hidden {
+  display: none
+}
+
+.invisible {
+  visibility: hidden
+}
+
+.formStatus {
+  display: inline-block;
+  padding: .25em .5em;
+  color: #000;
+  background-color: #fff;
+  border: 1px solid #000;
+  font-size: 12px;
+  text-transform: uppercase;
+  cursor: default;
+  min-width: 5rem;
+  text-align: center
+}
+
+.formStatus--starting {
+  background-color: #ffbf47
+}
+
+.formStatus--running {
+  background-color: #006435;
+  border-color: #006435;
+  color: #fff
+}
+/*# sourceMappingURL=app-0.5.9.css.map */
