--- a/assets/stylesheets/create-0.5.26.css
+++ b/assets/stylesheets/create-0.5.26.css
@@ -1119,7 +1119,8 @@ template {
 
 .govuk-width-container {
   max-width: 960px;
-  margin: 0 15px
+  margin-right: 15px;
+  margin-left: 15px
 }
 
 @supports (margin:max(calc(0px))) {
@@ -1131,7 +1132,8 @@ template {
 
 @media (min-width:40.0625em) {
   .govuk-width-container {
-    margin: 0 30px
+    margin-right: 30px;
+    margin-left: 30px
   }
 
 @supports (margin:max(calc(0px))) {
@@ -1144,12 +1146,14 @@ template {
 
 @media (min-width:1020px) {
   .govuk-width-container {
-    margin: 0 auto
+    margin-right: auto;
+    margin-left: auto
   }
 
 @supports (margin:max(calc(0px))) {
     .govuk-width-container {
-      margin: 0 auto
+      margin-right: auto;
+      margin-left: auto
     }
 }
 }
@@ -1815,7 +1819,6 @@ template {
   margin-left: 5px;
   vertical-align: middle;
   flex-shrink: 0;
-  -webkit-align-self: center;
   align-self: center
 }
 
@@ -3131,18 +3134,6 @@ template {
   background-color: #fd0;
   box-shadow: 0 -2px #fd0,0 4px #0b0c0c;
   text-decoration: none
-}
-
-.govuk-footer__inline-list .govuk-footer__link,
-.govuk-footer__list .govuk-footer__link {
-  text-decoration: none
-}
-
-.govuk-footer__inline-list .govuk-footer__link:active:not(:focus),
-.govuk-footer__inline-list .govuk-footer__link:hover:not(:focus),
-.govuk-footer__list .govuk-footer__link:active:not(:focus),
-.govuk-footer__list .govuk-footer__link:hover:not(:focus) {
-  text-decoration: underline
 }
 
 .govuk-footer__section-break {
@@ -6295,4 +6286,4 @@ html.govuk-template {
     font-weight: 700
   }
 }
-/*# sourceMappingURL=settings-0.5.25.css.map */
+/*# sourceMappingURL=create-0.5.26.css.map */
