--- a/assets/stylesheets/settings-0.5.33.css
+++ b/assets/stylesheets/settings-0.5.33.css
@@ -6274,4 +6274,8 @@ html.govuk-template {
     font-weight: 700
   }
 }
-/*# sourceMappingURL=create-0.5.32.css.map */
+
+.govuk-tabs__panel p:last-of-type {
+  margin-bottom: 0
+}
+/*# sourceMappingURL=settings-0.5.33.css.map */
