--- a/assets/stylesheets/app-0.5.38.css
+++ b/assets/stylesheets/app-0.5.38.css
@@ -6348,10 +6348,12 @@ html.govuk-template {
   text-align: center
 }
 
+.fileUploadStatus--has-found-file-upload,
 .formStatus--starting {
   background-color: #ffbf47
 }
 
+.fileUploadStatus--has-updated-file-upload,
 .formStatus--running {
   background-color: #006435;
   border-color: #006435;
