--- a/assets/stylesheets/settings-0.5.40.css
+++ b/assets/stylesheets/settings-0.5.40.css
@@ -6322,4 +6322,8 @@ html.govuk-template {
     font-weight: 700
   }
 }
-/*# sourceMappingURL=password-0.5.39.css.map */
+
+.govuk-tabs__panel p:last-of-type {
+  margin-bottom: 0
+}
+/*# sourceMappingURL=settings-0.5.40.css.map */
