--- a/assets/stylesheets/password-0.5.42.css
+++ b/assets/stylesheets/password-0.5.42.css
@@ -358,6 +358,16 @@ template {
   }
 }
 
+.govuk-list--spaced > li {
+  margin-bottom: 10px
+}
+
+@media (min-width:40.0625em) {
+  .govuk-list--spaced > li {
+    margin-bottom: 15px
+  }
+}
+
 .govuk-template {
   background-color: #f3f2f1;
   -webkit-text-size-adjust: 100%;
@@ -1178,8 +1188,34 @@ template {
 }
 
 .govuk-accordion__section-heading {
+  font-family: GDS Transport,Arial,sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-weight: 400;
+  font-size: 1.125rem;
+  line-height: 1.11111;
   margin-top: 0;
   margin-bottom: 0
+}
+
+@media print {
+  .govuk-accordion__section-heading {
+    font-family: sans-serif
+  }
+}
+
+@media (min-width:40.0625em) {
+  .govuk-accordion__section-heading {
+    font-size: 1.5rem;
+    line-height: 1.25
+  }
+}
+
+@media print {
+  .govuk-accordion__section-heading {
+    font-size: 18pt;
+    line-height: 1.15
+  }
 }
 
 .govuk-accordion__section-button {
@@ -1476,30 +1512,40 @@ template {
 }
 
 .govuk-back-link[href] {
-  border-bottom: 1px solid #0b0c0c;
-  text-decoration: none
+  text-decoration: underline
 }
 
 .govuk-back-link[href]:focus {
-  border-bottom-color: transparent
+  text-decoration: none
+}
+
+.govuk-back-link[href]:focus:before {
+  border-color: #0b0c0c
 }
 
 .govuk-back-link:before {
-  display: block;
-  width: 0;
-  height: 0;
-  -webkit-clip-path: polygon(0 50%,100% 100%,100% 0);
-  clip-path: polygon(0 50%,100% 100%,100% 0);
-  border-color: transparent;
-  border-style: solid;
-  border-width: 5px 6px 5px 0;
-  border-right-color: inherit;
   content: "";
+  display: block;
   position: absolute;
   top: 0;
   bottom: 0;
-  left: 0;
-  margin: auto
+  left: 3px;
+  width: 7px;
+  height: 7px;
+  margin: auto 0;
+  transform: rotate(225deg);
+  border: solid;
+  border-width: 1px 1px 0 0;
+  border-color: #626a6e
+}
+
+.govuk-back-link:after {
+  content: "";
+  position: absolute;
+  top: -14px;
+  right: 0;
+  bottom: -14px;
+  left: 0
 }
 
 .govuk-breadcrumbs {
@@ -1617,6 +1663,26 @@ template {
   .govuk-breadcrumbs__link:link,
   .govuk-breadcrumbs__link:visited {
     color: #000
+  }
+}
+
+@media (max-width:40.0525em) {
+  .govuk-breadcrumbs--collapse-on-mobile .govuk-breadcrumbs__list-item {
+    display: none
+  }
+
+  .govuk-breadcrumbs--collapse-on-mobile .govuk-breadcrumbs__list-item:first-child,
+  .govuk-breadcrumbs--collapse-on-mobile .govuk-breadcrumbs__list-item:last-child {
+    display: inline-block
+  }
+
+  .govuk-breadcrumbs--collapse-on-mobile .govuk-breadcrumbs__list-item:before {
+    top: 6px;
+    margin: 0
+  }
+
+  .govuk-breadcrumbs--collapse-on-mobile .govuk-breadcrumbs__list {
+    display: flex
   }
 }
 
@@ -2440,6 +2506,66 @@ template {
   .govuk-checkboxes--small .govuk-checkboxes__item:hover .govuk-checkboxes__input:focus + .govuk-checkboxes__label:before {
     box-shadow: 0 0 0 3px #fd0
   }
+}
+
+.govuk-textarea {
+  font-family: GDS Transport,Arial,sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.25;
+  box-sizing: border-box;
+  display: block;
+  width: 100%;
+  min-height: 40px;
+  margin-bottom: 20px;
+  padding: 5px;
+  resize: vertical;
+  border: 2px solid #0b0c0c;
+  border-radius: 0;
+  -webkit-appearance: none
+}
+
+@media print {
+  .govuk-textarea {
+    font-family: sans-serif
+  }
+}
+
+@media (min-width:40.0625em) {
+  .govuk-textarea {
+    font-size: 1.1875rem;
+    line-height: 1.25
+  }
+}
+
+@media print {
+  .govuk-textarea {
+    font-size: 14pt;
+    line-height: 1.25
+  }
+}
+
+@media (min-width:40.0625em) {
+  .govuk-textarea {
+    margin-bottom: 30px
+  }
+}
+
+.govuk-textarea:focus {
+  outline: 3px solid #fd0;
+  outline-offset: 0;
+  box-shadow: inset 0 0 0 2px
+}
+
+.govuk-textarea--error {
+  border: 4px solid #d4351c
+}
+
+.govuk-textarea--error:focus {
+  border-color: #0b0c0c;
+  box-shadow: none
 }
 
 .govuk-character-count {
@@ -4763,66 +4889,6 @@ only screen and (min-resolution:192dpi) {
   text-align: left
 }
 
-.govuk-textarea {
-  font-family: GDS Transport,Arial,sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-weight: 400;
-  font-size: 1rem;
-  line-height: 1.25;
-  box-sizing: border-box;
-  display: block;
-  width: 100%;
-  min-height: 40px;
-  margin-bottom: 20px;
-  padding: 5px;
-  resize: vertical;
-  border: 2px solid #0b0c0c;
-  border-radius: 0;
-  -webkit-appearance: none
-}
-
-@media print {
-  .govuk-textarea {
-    font-family: sans-serif
-  }
-}
-
-@media (min-width:40.0625em) {
-  .govuk-textarea {
-    font-size: 1.1875rem;
-    line-height: 1.25
-  }
-}
-
-@media print {
-  .govuk-textarea {
-    font-size: 14pt;
-    line-height: 1.25
-  }
-}
-
-@media (min-width:40.0625em) {
-  .govuk-textarea {
-    margin-bottom: 30px
-  }
-}
-
-.govuk-textarea:focus {
-  outline: 3px solid #fd0;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 2px
-}
-
-.govuk-textarea--error {
-  border: 4px solid #d4351c
-}
-
-.govuk-textarea--error:focus {
-  border-color: #0b0c0c;
-  box-shadow: none
-}
-
 .govuk-warning-text {
   position: relative;
   margin-bottom: 20px;
@@ -6322,4 +6388,4 @@ html.govuk-template {
     font-weight: 700
   }
 }
-/*# sourceMappingURL=token-0.5.41.css.map */
+/*# sourceMappingURL=password-0.5.42.css.map */
