Update content for github account tab in settings

--- a/assets/stylesheets/settings-0.5.42.css
+++ b/assets/stylesheets/settings-0.5.42.css
@@ -4260,7 +4260,8 @@ only screen and (min-resolution:192dpi) {
 
 .govuk-tabs__tab {
   display: inline-block;
-  margin-bottom: 10px
+  margin-bottom: 10px;
+  margin: 0
 }
 
 .govuk-tabs__tab:link {
