Update personal access token tab in settings

--- a/assets/stylesheets/settings-0.5.42.css
+++ b/assets/stylesheets/settings-0.5.42.css
@@ -4260,8 +4260,7 @@ only screen and (min-resolution:192dpi) {
 
 .govuk-tabs__tab {
   display: inline-block;
-  margin-bottom: 10px;
-  margin: 0
+  margin-bottom: 10px
 }
 
 .govuk-tabs__tab:link {
