--- a/assets/stylesheets/settings-0.7.0.css
+++ b/assets/stylesheets/settings-0.7.0.css
@@ -6367,40 +6367,7 @@ html.govuk-template {
   }
 }
 
-.cell-nowrap a {
-  display: block
+.govuk-tabs__panel p:last-of-type {
+  margin-bottom: 0
 }
-
-.cell-nowrap .hidden {
-  display: none
-}
-
-.invisible {
-  visibility: hidden
-}
-
-.formStatus {
-  display: inline-block;
-  padding: .25em .5em;
-  color: #000;
-  background-color: #fff;
-  border: 1px solid #000;
-  font-size: 12px;
-  text-transform: uppercase;
-  cursor: default;
-  min-width: 5rem;
-  text-align: center
-}
-
-.fileUploadStatus--has-found-file-upload,
-.formStatus--starting {
-  background-color: #ffbf47
-}
-
-.fileUploadStatus--has-updated-file-upload,
-.formStatus--running {
-  background-color: #006435;
-  border-color: #006435;
-  color: #fff
-}
-/*# sourceMappingURL=app-0.6.0.css.map */
+/*# sourceMappingURL=settings-0.7.0.css.map */
