--- a/assets/stylesheets/password-0.7.2.css
+++ b/assets/stylesheets/password-0.7.2.css
@@ -40,6 +40,7 @@ pre {
 
 abbr[title] {
   text-decoration: underline;
+  -webkit-text-decoration: underline dotted;
   text-decoration: underline dotted
 }
 
@@ -375,6 +376,7 @@ template {
 
 .govuk-template {
   background-color: #f3f2f1;
+  -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%
 }
 
