--- a/assets/stylesheets/settings-0.7.3.css
+++ b/assets/stylesheets/settings-0.7.3.css
@@ -6373,4 +6373,8 @@ html.govuk-template {
     font-weight: 700
   }
 }
-/*# sourceMappingURL=add-0.7.2.css.map */
+
+.govuk-tabs__panel p:last-of-type {
+  margin-bottom: 0
+}
+/*# sourceMappingURL=settings-0.7.3.css.map */
